Updates for nav display issue on smaller screen.

--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -6,7 +6,7 @@ nav {
   outline: 0;
   vertical-align: baseline;
   width:100%;
-  height:40px;
+  height:50px;
   padding-right:200px;
   #title {
     float:left;
@@ -19,7 +19,7 @@ nav {
   }
 
   .menuItem {
-    @include span-columns(1);
+    @include span-columns(2);
     cursor:pointer;
     color:$textColor;
     font-size:24px;
